Aggiunto stile per le pagine mancanti

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,91 +1,92 @@
 <!DOCTYPE html>
 <html>
 
-	<head th:replace="fragments/base.html :: headFragment(title='Home')"></head>
+<head th:replace="fragments/base.html :: headFragment(title='Home')"></head>
 
-	<body>
-		<header>
-			<div class="navbar navbar-dark bg-dark shadow-sm container-flex">
-	        	<div class="row w-100 p-3" sec:authorize="hasAuthority('ADMIN')">
-						<a th:href="@{/admin}" class="col text-white ml-5 ">
-	          		  		<h5> < Alla admin home</h5>
-	          			</a>
-	            	<div class="col text-white">
-			    		<span class="text-muted float-right mr-5">Effettua il
-							<a th:href="@{/logout}">logout</a>		
-						</span>
-			  		</div>
-	        	</div>
-	      	</div>
-		</header>	
+<body>
+	<header>
+		<div class="container navbar navbar-dark bg-dark shadow-sm">
+			<div
+				class="d-flex justify-content-between align-items-center w-100 p-3">
+				<a th:href="@{/admin}" class="text-white ml-5" sec:authorize="hasAuthority('ADMIN')">
+					<h5>< Alla admin home</h5>
+				</a>
+				<div class="text-white">
+					<span class="text-muted mr-5">Effettua il <a
+						th:href="@{/logout}">logout</a>
+					</span>
+				</div>
+			</div>
+		</div>
+	</header>
 
-		<main>
-			<div class="container">
-    		  <div class="d-flex align-items-center p-3 my-3 text-white gradient-custom-2 rounded shadow-sm">
-        		<img th:src="@{/images/tentacle.png}" class="me-3" alt="" width="48" height="38">
-			  <div class="lh-1">
-          		<h4 sec:authentication="name" class="h4 mb-0 text-white lh-1"></h4>
+	<main>
+	<div class="container">
+		<div class="d-flex align-items-center p-3 my-3 text-white gradient-custom-2 rounded shadow-sm">
+			<img th:src="@{/images/tentacle.png}" class="me-3" width="48"
+				height="38">
+			<div class="lh-1">
+				<h4 sec:authentication="name" class="h4 mb-0 text-white lh-1"></h4>
 				<small>Home</small>
-        	</div>
-      	</div>
-			<section th:unless="${#lists.isEmpty(events)}">
-				<div class="container">
-					<div class="my-3 p-3 bg-white rounded shadow-sm">
-			        	<h6 class="pb-2 mb-0">Eventi</h6>
-			            <hr>
-			            	<div class="d-flex text-muted pt-3">
-			            
-				<ul class="w-100">
-					<li th:each="event : ${events}">
-						<div class="pb-3 mb-0 lh-sm row">
-							<div class="col">
-						<a th:href="@{'/event/' + ${event.id}}"
-						th:text="${event.name}" class="link-purple">
-						</a>
-						</div>
-						<div class="col">
-							<a th:if="${!#lists.contains(event.participants, currentUser)}"
-							th:href="@{'/event/' + ${event.id} + '/participate'}" class="btn btn-primary fa-lg gradient-custom-2 float-right mr-4">
-								Partecipa
-							</a>
-							<a th:if="${#lists.contains(event.participants, currentUser)}"
-							th:href="@{'/event/' + ${event.id} + '/cancel-participation'}" class="btn btn-primary fa-lg gradient-custom-2 float-right mr-4">
-								Annulla partecipazione
-							</a>
-						</div>
-						</div>
-					</li>
-				</ul>
-				</div>
-				</div>
-				</div>
-			</section>
-			
-			<section th:unless="${#lists.isEmpty(events)}">
-				<div class="container">
-					<div class="my-3 p-3 bg-white rounded shadow-sm">
-			        	<h6 class="pb-2 mb-0">Competizioni</h6>
-			            <hr>
-			            	<div class="d-flex text-muted pt-3">
-			            	
-				<ul class="w-100">
-					<li th:each="competition : ${competitions}">
-						<div class="pb-3 mb-0 lh-sm row">
-							<div class="col">
-						<a th:href="@{'/competition/' + ${competition.id}}"
-						th:text="${competition.name}" class="link-purple">
-						</a>
-						</div>
-						</div>
-					</li>
-				</ul>
-				</div>
-				</div>
-				</div>
-			</section>
+			</div>
+		</div>
+	</div>
+	<section th:unless="${#lists.isEmpty(events)}">
+		<div class="container">
+			<div class="my-3 p-3 bg-white rounded shadow-sm">
+				<h6 class="pb-2 mb-0">Eventi</h6>
+				<hr>
+				<div class="text-muted pt-3">
 
-		</main>
+					<ul class="list-group">
+						<li th:each="event : ${events}"
+							class="list-group-item d-flex justify-content-between align-items-center">
+							<div class="pb-3 mb-0 lh-sm">
+								<a th:href="@{'/event/' + ${event.id}}" th:text="${event.name}"
+									class="link-purple"> </a>
+							</div>
+							<div>
+								<a th:if="${!#lists.contains(event.participants, currentUser)}"
+									th:href="@{'/event/' + ${event.id} + '/participate'}"
+									class="btn btn-primary fa-lg gradient-custom-2 float-right mr-4">
+									Partecipa </a> 
+								<a th:if="${#lists.contains(event.participants, currentUser)}"
+									th:href="@{'/event/' + ${event.id} + '/cancel-participation'}"
+									class="btn btn-primary fa-lg gradient-custom-2 float-right mr-4">
+									Annulla partecipazione </a>
+							</div>
+						</li>
+					</ul>
+				</div>
 
-	</body>
+			</div>
+		</div>
+	</section>
+
+
+	<section th:unless="${#lists.isEmpty(events)}">
+		<div class="container">
+			<div class="my-3 p-3 bg-white rounded shadow-sm">
+				<h6 class="pb-2 mb-0">Competizioni</h6>
+				<hr>
+				<div class="text-muted pt-3">
+
+					<ul class="list-group">
+						<li th:each="competition : ${competitions}"
+							class="list-group-item d-flex justify-content-between align-items-center">
+							<div class="pb-3 mb-0 lh-sm">
+								<a th:href="@{'/competition/' + ${competition.id}}"
+									th:text="${competition.name}" class="link-purple"> </a>
+							</div>
+						</li>
+					</ul>
+				</div>
+
+			</div>
+		</div>
+	</section>
+	</main>
+
+</body>
 
 </html>
