--- a/src/main/resources/templates/update-match.html
+++ b/src/main/resources/templates/update-match.html
@@ -1,53 +1,104 @@
 <!DOCTYPE html>
 <html>
 
-	<head th:replace="fragments/base.html :: headFragment(title='Modifica match')"></head>
+<head
+	th:replace="fragments/base.html :: headFragment(title='Modifica match')"></head>
 
-	<body>
-	
-		<form th:action="@{'/admin/match/' + ${match.id} + '/update'}" method="POST" th:object="${match}">
-			<div>
-				Data ed ora di inizio del match: <input type="datetime-local" th:field="*{dateTime}">
-			</div>
-			<span th:if="${#fields.hasErrors('dateTime')}" 
-				  th:errors="*{dateTime}"></span>
-				  
-			<div>
-				Avversario: <input type="text" th:field="*{opponent}">
-			</div>
-			<span th:if="${#fields.hasErrors('opponent')}" 
-				  th:errors="*{opponent}"></span>
-				  
-			<div>
-				Risultato:
-				<div th:each="result : ${T(it.mantik.esquid.model.MatchResult).values()}">
-					<input id="result-radio-button" type="radio" th:field="*{result}" th:value="${result}">
-					<label th:if="${result == T(it.mantik.esquid.model.MatchResult).VICTORY}"
-					th:text="Vittoria" for="result-radio-button">
-					</label>
-					<label th:if="${result == T(it.mantik.esquid.model.MatchResult).DEFEAT}"
-					th:text="Sconfitta" for="result-radio-button">
-					</label>
-					<label th:if="${result == T(it.mantik.esquid.model.MatchResult).DRAW}"
-					th:text="Pareggio" for="result-radio-button">
-					</label>
+<body>
+
+	<header>
+		<div class="container navbar navbar-dark bg-dark shadow-sm">
+			<div
+				class="d-flex justify-content-between align-items-center w-100 p-3">
+				<a th:href="@{/}" class="text-white ml-5 ">
+					<h5>< Alla user home</h5>
+				</a>
+				<div class="text-white">
+					<span class="text-muted mr-5">Effettua il <a
+						th:href="@{/logout}">logout</a>
+
+					</span>
 				</div>
 			</div>
-			<span th:if="${#fields.hasErrors('result')}" 
-				  th:errors="*{result}"></span>
-			<input type="hidden" th:field="*{id}" />
-			<input type="hidden" th:field="*{competition}" />
-			
-			<div>
-				<button type="submit">Salva modifiche</button>
-			</div>
-			
-		</form>
-		
-		<h3>
-			<a th:href="@{/admin}">Annulla</a>
-		</h3>
-		
-	</body>
+		</div>
+	</header>
+
+	<main>
+
+	<div class="card w-50 mx-auto mt-5 text-center">
+		<div class="card-header">
+			<h3>Modifica un match</h3>
+		</div>
+		<div class="card-body p-5">
+
+			<form th:action="@{'/admin/match/' + ${match.id} + '/update'}"
+				method="POST" th:object="${match}">
+				<div class="form-group">
+					<label for="inputDateTime" class="form-label">Data ed ora
+						di inizio del match</label>
+					<div class="mb-4">
+						<input type="datetime-local" th:field="*{dateTime}"
+							class="form-control"
+							th:classappend="*{#fields.hasErrors('dateTime') ? 'is-invalid' : ''}"
+							id="inputDateTime">
+						<div class="invalid-feedback">
+							<span th:if="${#fields.hasErrors('dateTime')}"
+								th:errors="*{dateTime}"></span>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="form-group">
+					<label for="inputOpponent" class="form-label">Avversario</label>
+					<div class="mb-4">
+						<input type="text" th:field="*{opponent}" class="form-control"
+							th:classappend="*{#fields.hasErrors('opponent') ? 'is-invalid' : ''}"
+							id="inputOpponent">
+						<div class="invalid-feedback">
+							<span th:if="${#fields.hasErrors('opponent')}"
+								th:errors="*{opponent}"></span>
+						</div>
+					</div>
+				</div>
+
+				<div class="form-group">
+					<label for="result-radio-button" class="form-label">Risultato</label>
+					<div class="mb-4">
+						<div
+							th:each="result : ${T(it.mantik.esquid.model.MatchResult).values()}">
+							<input id="result-radio-button" type="radio" th:field="*{result}"
+								th:value="${result}"> <label
+								th:if="${result == T(it.mantik.esquid.model.MatchResult).VICTORY}"
+								th:text="Vittoria" for="result-radio-button"> </label> <label
+								th:if="${result == T(it.mantik.esquid.model.MatchResult).DEFEAT}"
+								th:text="Sconfitta" for="result-radio-button"> </label> <label
+								th:if="${result == T(it.mantik.esquid.model.MatchResult).DRAW}"
+								th:text="Pareggio" for="result-radio-button"> </label>
+						</div>
+					</div>
+				</div>
+
+				<span th:if="${#fields.hasErrors('result')}" th:errors="*{result}"></span>
+
+				<input type="hidden" th:field="*{id}" />
+				<input type="hidden" th:field="*{competition}" />
+
+				<div class="d-grid">
+					<button type="submit" class="btn text-white gradient-custom-2">Salva
+						modifiche</button>
+				</div>
+			</form>
+		</div>
+
+		<a th:href="@{/admin}" class="link-purple card-footer text-muted">Annulla</a>
+
+	</div>
+
+	</main>
+
+	<div>th:replace="fragments/base.html :: scriptFragment"></div>
+
+</body>
 
 </html>
