--- a/src/main/resources/templates/admin-home.html
+++ b/src/main/resources/templates/admin-home.html
@@ -1,138 +1,175 @@
 <!DOCTYPE html>
 <html>
+
+<head th:replace="fragments/base.html :: headFragment(title='Admin home')"></head>
+
+<body>
+
+	<header>
+		<div class="container navbar navbar-dark bg-dark shadow-sm">
+			<div
+				class="d-flex justify-content-between align-items-center w-100 p-3">
+				<a th:href="@{/}" class="text-white ml-5 ">
+					<h5>< Alla user home</h5>
+				</a>
+				<div class="text-white">
+					<span class="text-muted mr-5">Effettua il <a
+						th:href="@{/logout}">logout</a>
+
+					</span>
+				</div>
+			</div>
+		</div>
+	</header>
 	
-	<head th:replace="fragments/base.html :: headFragment(title='Admin home')"></head>
+	<main>
 	
+	<div class="container">
+		<div
+			class="d-flex align-items-center p-3 my-3 text-white gradient-custom-2 rounded shadow-sm">
+			<img th:src="@{/images/tentacle.png}" class="me-3" width="48"
+				height="38">
+			<div class="lh-1">
+				<h4 sec:authentication="name" class="h4 mb-0 text-white lh-1"></h4>
+				<small>Admin home</small>
+			</div>
+		</div>
+	</div>
 	
-	<body>
-	
-    <header>
-      <div class="navbar navbar-dark bg-dark shadow-sm container-flex">
-        <div class="row w-100 p-3">
-          <a th:href="@{/}" class="col text-white ml-5 ">
-            <h5> < Alla user home</h5>
-          </a>
-          <div class="col text-white">
-		    <span class="text-muted float-right mr-5">Effettua il
-				<a th:href="@{/logout}">logout</a>
-				
-			</span>
-		  </div>
-        </div>
-      </div>
-    </header>
-    <main>
-    <div class="container">
-      <div class="d-flex align-items-center p-3 my-3 text-white gradient-custom-2 rounded shadow-sm">
-        <img th:src="@{/images/tentacle.png}" class="me-3" alt="" width="48" height="38">
-        <div class="lh-1">
-          <h4 sec:authentication="name" class="h4 mb-0 text-white lh-1"></h4>
-          <small>Admin home</small>
-        </div>
-      </div>
+	<section th:unless="${#lists.isEmpty(pendingUsers)}">
+		<div class="container">
+			<div class="my-3 p-3 bg-white rounded shadow-sm">
+				<h6 class="pb-2 mb-0">Utenti in attesa di accettazione</h6>
+				<hr>
+				<div class="text-muted pt-3">
 
-    </div>
-      <section th:unless="${#lists.isEmpty(pendingUsers)}">
-        <div class="container">
-          <div class="my-3 p-3 bg-white rounded shadow-sm">
-            <h6 class="pb-2 mb-0">Utenti in attesa di accettazione</h6>
-            <hr>
-            <div class="d-flex text-muted pt-3">
+					<ul class="list-group">
+						<li th:each="pendingUser : ${pendingUsers}"
+							class="list-group-item d-flex justify-content-between align-items-center">
+							<div>
+								<strong
+									th:text="${pendingUser.surname + ', ' + pendingUser.name}"
+									class="text-gray-dark"></strong>
+							</div>
+							<div>
+								<a th:href="@{'/admin/user/' + ${pendingUser.id} + '/enable'}"
+									class="btn text-white gradient-custom-2 mr-4">Accetta</a>
+							</div>
+						</li>
+						<hr>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
 
-              <ul class="w-100">
-                <li th:each="pendingUser : ${pendingUsers}">
-                  <div class="pb-3 mb-0 lh-sm row">
-                  	<div class="col">
-                    	<strong th:text="${pendingUser.surname + ', ' + pendingUser.name}"  class="text-gray-dark"></strong>
-                    </div>
-                    <div class="col">
-                    	<a th:href="@{'/admin/user/' + ${pendingUser.id} + '/enable'}" class="btn btn-primary fa-lg gradient-custom-2 float-right mr-4">Accetta</a>
-                  	</div>
-                  </div>
-                </li>
-                <hr>
-              </ul>
-            </div>
-            
-            <!--
-			<h2>Utenti membri del team</h2>
-			<ul>
-				<li th:each="member : ${members}">
-					<span th:text="${member.surname + ', ' + member.name}"></span>
-					<a th:href="@{'/admin/user/' + ${member.id} + '/disable'}">Disabilita</a>
-				</li>
-			</ul>
-			-->
+	<section th:unless="${#lists.isEmpty(members)}">
+		<div class="container">
+			<div class="my-3 p-3 bg-white rounded shadow-sm">
+				<h6 class="pb-2 mb-0">Membri del team</h6>
+				<hr>
+				<div class="text-muted pt-3">
 
-          </div>
+					<ul class="list-group">
+						<li th:each="member : ${members}"
+							class="list-group-item d-flex justify-content-between align-items-center">
+							<div>
+								<strong th:text="${member.surname + ', ' + member.name}"
+									class="text-gray-dark"></strong>
+							</div>
+							<div>
+								<a th:href="@{'/admin/user/' + ${member.id} + '/disable'}"
+									class="btn text-white gradient-custom-2 float-right mr-4">Disabilita</a>
 
-        </div>
-      </section>
+							</div>
+						</li>
+						<hr>
+					</ul>
+				</div>
 
-      <section>
-        <div class="container">
-          <div class="my-3 p-3 bg-white rounded shadow-sm">
-            <h6 class="pb-2 mb-0">Eventi</h6>
-            <hr>
-            <a th:href="@{/admin/event/new}" class="btn btn-primary fa-lg gradient-custom-2">Crea evento</a>
-            <div class="d-flex text-muted pt-3">
+			</div>
+		</div>
+	</section>
 
-              <ul class="w-100">
-                <li th:each="event : ${events}">
-                  <strong th:text="${event.name}" class="text-gray-dark"></strong>
-                  <div class="row">
-                  	<div class="col">
-	                  <a th:href="@{'/admin/event/' + ${event.id} + '/update'}" class="link-purple">Modifica</a>
-	                </div>
-	                <div class="col">
-	                  <a th:href="@{'/admin/event/' + ${event.id} + '/delete'}" class="float-right mr-5 link-purple">Annulla</a>
-				  	</div>
-				  </div>
-				  <hr>
-                </li>
-              </ul>
-            </div>
+	<section>
+		<div class="container">
+			<div class="my-3 p-3 bg-white rounded shadow-sm">
+				<h6 class="pb-2 mb-0">Eventi</h6>
+				<hr>
+				<a th:href="@{/admin/event/new}"
+					class="btn text-white gradient-custom-2">Crea evento</a>
+				<div class="text-muted pt-3">
 
-          </div>
+					<ul class="list-group">
+						<li th:each="event : ${events}"
+							class="list-group-item d-flex justify-content-between align-items-center">
+							<strong th:text="${event.name} + ', ' + ${event.dateTime}"
+							class="text-gray-dark"></strong>
+							<div>
+								<a th:href="@{'/admin/event/' + ${event.id} + '/update'}"
+									class="link-purple">Modifica</a>
+							</div>
+							<div>
+								<a th:href="@{'/admin/event/' + ${event.id} + '/delete'}"
+									class="float-right mr-5 link-purple">Annulla</a>
+							</div>
+						</li>
+						<hr>
+					</ul>
+				</div>
 
-        </div>
-      </section>
 
-      <section>
-        <div class="container pb-4">
-          <div class="my-3 p-3 bg-white rounded shadow-sm">
-            <h6 class="pb-2 mb-0">Competizioni</h6>
-            <hr>
-            <a th:href="@{/admin/event/new}" class="btn btn-primary fa-lg gradient-custom-2">Crea competizione</a>
-            <div class="d-flex text-muted pt-3">
+			</div>
 
- 
-	      				<ul class="w-100">
-	      					<li th:each="competition : ${competitions}">
-	      						<a th:href="@{'/admin/competition/' + ${competition.id}}" th:text="${competition.name}" class="font-weight-bold link-purple"></a>
-	      						<div class="row">
-	      							<div class="col">
-		      							<a th:href="@{'/admin/competition/' + ${competition.id} + '/update'}" class="link-purple">Modifica generalit&agrave;</a>
-		      						</div>
-		      						<div class="col text-center">
-		      						<a th:href="@{'/admin/competition/' + ${competition.id} + '/match/new'}" class="link-purple">Aggiungi match</a>
-		      						</div>
-		      						<div class="col">
-		      							<a th:href="@{'/admin/competition/' + ${competition.id} + '/delete'}" class="float-right mr-5 link-purple">Cancella</a>
-	    							</div>
-	    						</div>
-	    				</li>
-	    				<hr>
-  				</ul>
-            </div>
+		</div>
+	</section>
 
-          </div>
+	<section>
+		<div class="container pb-4">
+			<div class="my-3 p-3 bg-white rounded shadow-sm">
+				<h6 class="pb-2 mb-0">Competizioni</h6>
+				<hr>
+				<a th:href="@{/admin/competition/new}"
+					class="btn text-white gradient-custom-2">Crea competizione</a>
+				<div class="text-muted pt-3">
 
-        </div>
-      </section>
 
-    </main>
+					<ul class="list-group">
+						<li th:each="competition : ${competitions}"
+							class="list-group-item d-flex justify-content-between align-items-center">
+							<a th:href="@{'/admin/competition/' + ${competition.id}}"
+							th:text="${competition.name}"
+							class="font-weight-bold link-purple"></a>
+							<div>
+								<a
+									th:href="@{'/admin/competition/' + ${competition.id} + '/update'}"
+									class="link-purple">Modifica generalit&agrave;</a>
+							</div>
+							<div>
+								<a
+									th:href="@{'/admin/competition/' + ${competition.id} + '/match/new'}"
+									class="link-purple">Aggiungi match</a>
+							</div>
+							<div>
+								<a
+									th:href="@{'/admin/competition/' + ${competition.id} + '/delete'}"
+									class="float-right mr-5 link-purple">Cancella</a>
+							</div>
+						</li>
+						<hr>
+					</ul>
+				</div>
 
-	</body>
+			</div>
+
+		</div>
+
+	</section>
+
+	</main>
+
+	<div>th:replace="fragments/base.html :: scriptFragment"></div>
+
+</body>
 
 </html>
