--- a/src/main/resources/templates/competition.html
+++ b/src/main/resources/templates/competition.html
@@ -5,29 +5,54 @@
 	
 	<body>
 	
+	<header>
+		<div class="container navbar navbar-dark bg-dark shadow-sm">
+			<div
+				class="d-flex justify-content-between align-items-center w-100 p-3">
+				<a th:href="@{/}" class="text-white ml-5 ">
+					<h5>< Alla user home</h5>
+				</a>
+				<div class="text-white">
+					<span class="text-muted mr-5">Effettua il <a
+						th:href="@{/logout}">logout</a>
+
+					</span>
+				</div>
+			</div>
+		</div>
+	</header>
+	
 		<main>
-		
-			<h1 th:text="${competition.name}"></h1>
-			
-			<section>
-				<h4>Partite</h4>
-				<ul>
-					<li th:each="match : ${competition.matches}">
+		<section>
+		<div class="container">
+			<div class="my-3 p-3 bg-white rounded shadow-sm">
+				<h6 th:text="${competition.name}" class="pb-2 mb-0"></h6>
+				<hr>
+				<h6>Partite</h6>
+				<div class="text-muted pt-2">
+
+					<ul class="list-group">
+					
+					<li th:each="match : ${competition.matches}" class="list-group-item d-flex justify-content-around align-items-center">
+						
 						<span th:if="${match.result == T(it.mantik.esquid.model.MatchResult).VICTORY}" th:text="Vittoria"></span>
 						<span th:if="${match.result == T(it.mantik.esquid.model.MatchResult).DEFEAT}" th:text="Sconfitta"></span>
 						<span th:if="${match.result == T(it.mantik.esquid.model.MatchResult).DRAW}" th:text="Pareggio"></span>
+						
 						<span th:text="${'vs ' + match.opponent}"></span>
+					
 					</li>
+				
 				</ul>
+			
+			</div>
+			</div>
+			</div>
+			
 			</section>
 			
 		</main>
 		
-			<h3>
-				Ritorna alla 
-				<a th:href="@{/}">home</a>
-			</h3>
-	
 	</body>
 
 </html>
