--- a/src/main/resources/templates/create-competition.html
+++ b/src/main/resources/templates/create-competition.html
@@ -1,38 +1,96 @@
 <!DOCTYPE html>
 <html>
 
-	<head th:replace="fragments/base.html :: headFragment(title='Creazione competizione')"></head>
-	
-	<body>
-	
-		<form th:action="@{/admin/competition}" method="POST" th:object="${competition}">
-			<div>
-				Nome della competizione: <input type="text" th:field="*{name}">
+<head
+	th:replace="fragments/base.html :: headFragment(title='Creazione competizione')"></head>
+
+<body>
+
+	<header>
+		<div class="container navbar navbar-dark bg-dark shadow-sm">
+			<div
+				class="d-flex justify-content-between align-items-center w-100 p-3">
+				<a th:href="@{/}" class="text-white ml-5 ">
+					<h5>< Alla user home</h5>
+				</a>
+				<div class="text-white">
+					<span class="text-muted mr-5">Effettua il <a
+						th:href="@{/logout}">logout</a>
+
+					</span>
+				</div>
 			</div>
-			<span th:if="${#fields.hasErrors('name')}" 
-				  th:errors="*{name}"></span>
-			
-			<div>
-				Data ed ora di inizio della competizione: <input type="datetime-local" th:field="*{startDateTime}">
-			</div>
-			<span th:if="${#fields.hasErrors('startDateTime')}" 
-				  th:errors="*{startDateTime}"></span>
-			<div>
-				Data ed ora di fine della competizione: <input type="datetime-local" th:field="*{endDateTime}">
-			</div>
-			<span th:if="${#fields.hasErrors('endDateTime')}" 
-				  th:errors="*{endDateTime}"></span>
-			
-			<div>
-				<button type="submit">Crea</button>
-			</div>
-		
-		</form>
-		
-			<h3>
-				<a th:href="@{/admin}">Annulla</a>
-			</h3>
-	
-	</body>
+		</div>
+	</header>
+
+	<main>
+
+	<div class="card w-50 mx-auto mt-5 text-center">
+		<div class="card-header">
+			<h3>Crea un nuovo evento</h3>
+		</div>
+		<div class="card-body p-5">
+
+			<form th:action="@{/admin/competition}" method="POST"
+				th:object="${competition}">
+
+				<div class="form-group row">
+					<label for="inputName" class="form-label">Nome della
+						competizione </label>
+					<div class="mb-4">
+						<input type="text" th:field="*{name}" class="form-control"
+							th:classappend="*{#fields.hasErrors('name') ? 'is-invalid' : ''}"
+							id="inputName">
+
+						<div class="invalid-feedback">
+							<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+						</div>
+					</div>
+				</div>
+
+				<div class="form-group row">
+					<label for="inputStartDateTime" class="form-label">Data ed
+						ora di inizio della competizione</label>
+					<div class="mb-4">
+						<input type="datetime-local" th:field="*{startDateTime}"
+							class="form-control datetimepicker"
+							th:classappend="*{#fields.hasErrors('startDateTime') ? 'is-invalid' : ''}"
+							id="inputStartDateTime">
+						<div class="invalid-feedback">
+							<span th:if="${#fields.hasErrors('startDateTime')}"
+								th:errors="*{startDateTime}"></span>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="form-group row">
+					<label for="inputEndDateTime" class="form-label">Data ed
+						ora di fine della competizione</label>
+					<div class="mb-4">
+						<input type="datetime-local" th:field="*{endDateTime}"
+							class="form-control datetimepicker"
+							th:classappend="*{#fields.hasErrors('endDateTime') ? 'is-invalid' : ''}"
+							id="inputEndDateTime">
+						<div class="invalid-feedback">
+							<span th:if="${#fields.hasErrors('endDateTime')}"
+								th:errors="*{endDateTime}"></span>
+						</div>
+					</div>
+				</div>
+
+				<div class="d-grid">
+					<button type="submit"
+						class="btn text-white gradient-custom-2 float-right mr-4">Crea</button>
+				</div>
+			</form>
+
+		</div>
+		<a th:href="@{/admin}" class="link-purple card-footer text-muted">Annulla</a>
+
+	</div>
+	</main>
+	<div>th:replace="fragments/base.html :: scriptFragment"></div>
+</body>
 
 </html>
