--- a/src/main/resources/templates/create-event.html
+++ b/src/main/resources/templates/create-event.html
@@ -1,33 +1,83 @@
 <!DOCTYPE html>
 <html>
 
-	<head th:replace="fragments/base.html :: headFragment(title='Creazione evento')"></head>
+<head
+	th:replace="fragments/base.html :: headFragment(title='Creazione evento')"></head>
 
-	<body>
-	
-		<form th:action="@{/admin/event}" method="POST" th:object="${event}">
-			<div>
-				Nome dell'evento: <input type="text" th:field="*{name}">
+<body>
+
+	<header>
+		<div class="container navbar navbar-dark bg-dark shadow-sm">
+			<div
+				class="d-flex justify-content-between align-items-center w-100 p-3">
+				<a th:href="@{/}" class="text-white ml-5 ">
+					<h5>< Alla user home</h5>
+				</a>
+				<div class="text-white">
+					<span class="text-muted mr-5">Effettua il <a
+						th:href="@{/logout}">logout</a>
+
+					</span>
+				</div>
 			</div>
-			<span th:if="${#fields.hasErrors('name')}" 
-				  th:errors="*{name}"></span>
-			
-			<div>
-				Data ed ora dell'evento: <input type="datetime-local" th:field="*{dateTime}">
-			</div>
-			<span th:if="${#fields.hasErrors('dateTime')}" 
-				  th:errors="*{dateTime}"></span>
-				  
-			<div>
-				<button type="submit">Crea</button>
-			</div>
-			
-		</form>
-		
-			<h3>
-				<a th:href="@{/admin}">Annulla</a>
-			</h3>
-			
-	</body>
+		</div>
+	</header>
+
+	<main>
+
+	<div class="card w-50 mx-auto mt-5 text-center">
+		<div class="card-header">
+			<h3>Crea un nuovo evento</h3>
+		</div>
+		<div class="card-body p-5">
+
+			<form th:action="@{/admin/event}" method="POST" th:object="${event}">
+
+				<div class="form-group">
+					<label for="inputName" class="form-label">Nome dell'evento
+					</label>
+					<div class="mb-4">
+						<input type="text" th:field="*{name}" class="form-control"
+							th:classappend="*{#fields.hasErrors('name') ? 'is-invalid' : ''}"
+							id="inputName">
+						<div class="invalid-feedback">
+							<span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+						</div>
+					</div>
+				</div>
+
+
+				<div class="form-group">
+					<label for="inputDateTime" class="form-label">Data ed ora
+						dell'evento </label>
+					<div class="mb-4">
+						<input type="datetime-local" th:field="*{dateTime}"
+							class="form-control datetimepicker"
+							th:classappend="*{#fields.hasErrors('dateTime') ? 'is-invalid' : ''}"
+							id="inputDateTime">
+						<div class="invalid-feedback">
+							<span th:if="${#fields.hasErrors('dateTime')}"
+								th:errors="*{dateTime}"></span>
+						</div>
+					</div>
+				</div>
+
+				<div class="d-grid">
+					<button type="submit"
+						class="btn text-white gradient-custom-2">Crea</button>
+				</div>
+
+			</form>
+		</div>
+
+		<a th:href="@{/admin}" class="link-purple card-footer text-muted">Annulla</a>
+
+	</div>
+
+
+	</main>
+
+	<div>th:replace="fragments/base.html :: scriptFragment"></div>
+</body>
 
 </html>
