--- a/src/main/resources/templates/event.html
+++ b/src/main/resources/templates/event.html
@@ -1,29 +1,56 @@
 <!DOCTYPE html>
 <html>
-		
-		<head th:replace="fragments/base.html :: headFragment(title='Evento')"></head>
-		
-	<body>
 
-		<main>
-			<h1 th:text="${event.name}"></h1>
+<head th:replace="fragments/base.html :: headFragment(title='Evento')"></head>
 
-			<section>
-				<h4>Partecipanti</h4>
-				<ul>
-					<li th:each="participant : ${event.participants}">
-						<span th:text="${participant.surname + ', ' + participant.name}"></span>
-					</li>
-				</ul>
-			</section>
-			
-		</main>
+<body>
+
+	<header>
+		<div class="container navbar navbar-dark bg-dark shadow-sm">
+			<div
+				class="d-flex justify-content-between align-items-center w-100 p-3">
+				<a th:href="@{/}" class="text-white ml-5 ">
+					<h5>< Alla user home</h5>
+				</a>
+				<div class="text-white">
+					<span class="text-muted mr-5">Effettua il <a
+						th:href="@{/logout}">logout</a>
+
+					</span>
+				</div>
+			</div>
+		</div>
+	</header>
+
+	<main>
+	
+	<section>
+	
+		<div class="container pb-4">
+			<div class="my-3 p-3 bg-white rounded shadow-sm">
+				<h6 th:text="${event.name}" class="pb-2 mb-0"></h6>
+				<hr>
+				<h6>Partecipanti</h6>
+
+				<div class="text-muted pt-2">
+
+					<ul class="list-group">
+						<li th:each="participant : ${event.participants}"
+						
+							class="list-group-item d-flex justify-content-between align-items-center"><span
+							th:text="${participant.surname + ', ' + participant.name}"></span>
+						
+						</li>
+					</ul>
+					
+				</div>
+			</div>
+		</div>
 		
-			<h3>
-				Ritorna alla 
-				<a th:href="@{/}">home</a>
-			</h3>
-			
-	</body>
+	</section>
+	
+	</main>
+
+</body>
 
 </html>
