--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -7,7 +7,7 @@
 <body>
 	<main class="h-100">
 
-	<div class="container mt-5">
+	<div class="container mt-5 pb-5">
 
 		<div class="d-flex justify-content-between bg-white rounded">
 
@@ -67,21 +67,21 @@
 						</div>
 					</div>
 
-					<div class="text-center pt-1 mb-5 pb-1">
+					<div class="d-grid pt-1 mb-5 pb-1">
 						<button type="submit"
-							class="btn btn-primary btn-block fa-lg gradient-custom-2 mb-3">Registrati</button>
+							class="btn text-white fa-lg gradient-custom-2 mb-3">Registrati</button>
 					</div>
 
 				</form>
 				<div class="d-flex align-items-center justify-content-center pb-4">
 					<div>
-						Hai gi&agrave; un account? <a th:href="@{/login}">Accedi</a>.
+						Hai gi&agrave; un account? <a th:href="@{/login}" class="link-purple">Accedi</a>.
 					</div>
 				</div>
 			</div>
 
 			<div
-				class="p-2 flex-fill col-lg-6 d-flex align-items-center gradient-custom-2">
+				class="w-50 d-flex align-items-center gradient-custom-2 rounded-end">
 				<div class="mx-auto">
 					<img th:src="@{/images/tentacle.png}" style="width: 220px;"
 						alt="logo">
