--- a/src/main/resources/templates/competition.html
+++ b/src/main/resources/templates/competition.html
@@ -1,58 +1,81 @@
 <!DOCTYPE html>
 <html>
-	
-	<head th:replace="fragments/base.html :: headFragment(title='Competizione')"></head>
-	
-	<body>
-	
-	<header>
-		<div class="container navbar navbar-dark bg-dark shadow-sm">
-			<div
-				class="d-flex justify-content-between align-items-center w-100 p-3">
-				<a th:href="@{/}" class="text-white ml-5 ">
-					<h5>< Alla user home</h5>
-				</a>
-				<div class="text-white">
-					<span class="text-muted mr-5">Effettua il <a
-						th:href="@{/logout}">logout</a>
 
-					</span>
-				</div>
+<head th:replace="fragments/base.html :: headFragment(title='Competizione')"></head>
+
+<body>
+
+	<header class="container container-custom my-3 p-3 gradient-custom-2 text-white rounded shadow-sm">
+		<div class="d-flex justify-content-between align-items-center">
+			<a th:href="@{/}" class="text-white ml-5 ">
+				<h5>
+					< Home</h5>
+			</a>
+			<div class="text-white">
+				<span class="text-muted mr-5">Effettua il <a th:href="@{/logout}">logout</a>
+
+				</span>
 			</div>
 		</div>
 	</header>
-	
-		<main>
-		<section>
-		<div class="container">
-			<div class="my-3 p-3 bg-white rounded shadow-sm">
-				<h6 th:text="${competition.name}" class="pb-2 mb-0"></h6>
-				<hr>
-				<h6>Partite</h6>
-				<div class="text-muted pt-2">
 
-					<ul class="list-group">
-					
-					<li th:each="match : ${competition.matches}" class="list-group-item d-flex justify-content-around align-items-center">
-						
-						<span th:if="${match.result == T(it.mantik.esquid.model.MatchResult).VICTORY}" th:text="Vittoria"></span>
-						<span th:if="${match.result == T(it.mantik.esquid.model.MatchResult).DEFEAT}" th:text="Sconfitta"></span>
-						<span th:if="${match.result == T(it.mantik.esquid.model.MatchResult).DRAW}" th:text="Pareggio"></span>
-						
-						<span th:text="${'vs ' + match.opponent}"></span>
-					
-					</li>
-				
-				</ul>
-			
-			</div>
-			</div>
-			</div>
-			
-			</section>
-			
-		</main>
+	<main class="container container-custom">
+		<section class="my-3 p-3 bg-white rounded shadow-sm">
 		
-	</body>
+			<div sec:authorize="hasAuthority('ADMIN')" class="position-relative">
+				<div class="dropdown dropdown-custom position-absolute top-0 end-0 ">
+					<button class="dropdown-button" type="button" data-bs-toggle="dropdown"
+						aria-expanded="false">
+						<i class="bi bi-three-dots"></i>
+					</button>
+					<ul class="dropdown-menu">
+						<li>
+							<a th:href="@{'/admin/competition/' + ${competition.id} + '/match/new'}"
+								class="dropdown-item">Aggiungi match</a>
+						</li>
+						<li>
+							<a th:href="@{'/admin/competition/' + ${competition.id} + '/update'}"
+								class="dropdown-item">Modifica generalità</a>
+						</li>
+						<li>
+							<a
+								th:href="@{'/admin/competition/' + ${competition.id} + '/delete'}"
+								class="dropdown-item">Cancella</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		
+			<h6 th:text="${competition.name}" class="pb-2 mb-0"></h6>
+			<hr>
+			<h6>Partite</h6>
+			<div class="text-muted pt-2">
+
+				<ul class="list-group">
+
+					<li th:each="match : ${competition.matches}"
+						class="list-group-item d-flex justify-content-around align-items-center">
+
+						<span th:if="${match.result == T(it.mantik.esquid.model.MatchResult).VICTORY}"
+							th:text="Vittoria"></span>
+						<span th:if="${match.result == T(it.mantik.esquid.model.MatchResult).DEFEAT}"
+							th:text="Sconfitta"></span>
+						<span th:if="${match.result == T(it.mantik.esquid.model.MatchResult).DRAW}"
+							th:text="Pareggio"></span>
+
+						<span th:text="${'vs ' + match.opponent}"></span>
+
+					</li>
+
+				</ul>
+
+			</div>
+			
+		</section>
+
+	</main>
+
+	<div th:replace="fragments/base.html :: scriptFragment"></div>
+</body>
 
 </html>
