--- a/src/main/resources/templates/create-event.html
+++ b/src/main/resources/templates/create-event.html
@@ -6,19 +6,16 @@
 
 <body>
 
-	<header>
-		<div class="container navbar navbar-dark bg-dark shadow-sm">
-			<div
-				class="d-flex justify-content-between align-items-center w-100 p-3">
-				<a th:href="@{/}" class="text-white ml-5 ">
-					<h5>< Alla user home</h5>
-				</a>
-				<div class="text-white">
-					<span class="text-muted mr-5">Effettua il <a
-						th:href="@{/logout}">logout</a>
+	<header class="container container-custom my-3 p-3 gradient-custom-2 text-white rounded shadow-sm">
+		<div class="d-flex justify-content-between align-items-center">
+			<a th:href="@{/}" class="text-white ml-5 ">
+				<h5>< Home</h5>
+			</a>
+			<div class="text-white">
+				<span class="text-muted mr-5">Effettua il <a
+					th:href="@{/logout}">logout</a>
 
-					</span>
-				</div>
+				</span>
 			</div>
 		</div>
 	</header>
