--- a/src/main/resources/templates/update-event.html
+++ b/src/main/resources/templates/update-event.html
@@ -6,20 +6,16 @@
 
 <body>
 
-	<header>
-		<div class="container navbar navbar-dark bg-dark shadow-sm">
-			<div
-				class="d-flex justify-content-between align-items-center w-100 p-3">
-				<a th:href="@{/}" class="text-white ml-5 ">
-					<h5>< Alla user home</h5>
-				</a>
-				<div class="text-white">
-					<span class="text-muted mr-5">Effettua il <a
-						th:href="@{/logout}">logout</a>
-
-					</span>
+	<header class="container container-custom my-3 p-3 gradient-custom-2 text-white rounded shadow-sm">
+		<div class="d-flex justify-content-between align-items-center">
+			<div class="d-flex">
+				<img th:src="@{/images/tentacle.png}" class="me-3" width="48" height="38">
+				<div class="lh-1">
+					<h4 sec:authentication="name" class="h4 mb-0 text-white lh-1"></h4>
+					<small>Home</small>
 				</div>
 			</div>
+			<a th:href="@{/logout}">Effettua il logout</a>
 		</div>
 	</header>
 
