--- a/src/main/resources/templates/competition.html
+++ b/src/main/resources/templates/competition.html
@@ -1,25 +1,17 @@
 <!DOCTYPE html>
 <html>
 
-<head th:replace="fragments/base.html :: headFragment(title='Competizione')"></head>
+<head th:replace="fragments/base.html :: head(title='Competizione')"></head>
 
 <body>
 
-	<header class="container container-custom my-3 p-3 gradient-custom-2 text-white rounded shadow-sm">
-		<div class="d-flex justify-content-between align-items-center">
-			<a th:href="@{/}" class="text-white ml-5 ">
-				<h5>
-					< Home</h5>
-			</a>
-			<div class="text-white">
-				<span class="text-muted mr-5">Effettua il <a th:href="@{/logout}">logout</a>
-
-				</span>
-			</div>
-		</div>
-	</header>
-
+	<header th:replace="fragments/base.html :: header(pageTitle='Competizione')"></header>
+	
 	<main class="container container-custom">
+	
+		<div th:each="message : ${successFlashMessages}" th:text="${message}" class="alert alert-success" role="alert">
+		</div>
+	
 		<section class="my-3 p-3 bg-white rounded shadow-sm">
 		
 			<div sec:authorize="hasAuthority('ADMIN')" class="position-relative">
@@ -75,7 +67,7 @@
 
 	</main>
 
-	<div th:replace="fragments/base.html :: scriptFragment"></div>
+	<div th:replace="fragments/base.html :: scripts"></div>
 </body>
 
 </html>
