--- a/src/main/resources/templates/fragments/base.html
+++ b/src/main/resources/templates/fragments/base.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 
-	<head th:fragment="headFragment">
+	<head th:fragment="head">
 	    <!-- Required meta tags -->
 	    <meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,11 +19,24 @@
 	
 	<body>
 	
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-	<div th:fragment="scriptFragment">
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-	</div>
+		<header th:fragment="header(pageTitle)" class="container container-custom my-3 p-3 gradient-custom-2 text-white rounded shadow-sm">
+			<div class="d-flex justify-content-between align-items-center">
+				<div class="d-flex">
+					<a th:href="@{/}">
+						<img th:src="@{/images/tentacle.png}" class="me-3" width="48" height="38">
+					</a>		
+					<div class="lh-1">
+						<h4 sec:authentication="name" class="h4 mb-0 text-white lh-1"></h4>
+						<small th:text="${pageTitle}"></small>
+					</div>
+				</div>
+				<a th:href="@{/logout}">Effettua il logout</a>
+			</div>
+		</header>
+	
+		<div th:fragment="scripts">
+			<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+		</div>
 	
 	</body>
 	
