--- a/src/main/resources/templates/update-competition.html
+++ b/src/main/resources/templates/update-competition.html
@@ -2,22 +2,11 @@
 <html>
 
 <head
-	th:replace="fragments/base.html :: headFragment(title='Modifica competizione')"></head>
+	th:replace="fragments/base.html :: head(title='Modifica competizione')"></head>
 
 <body>
 
-	<header class="container container-custom my-3 p-3 gradient-custom-2 text-white rounded shadow-sm">
-		<div class="d-flex justify-content-between align-items-center">
-			<div class="d-flex">
-				<img th:src="@{/images/tentacle.png}" class="me-3" width="48" height="38">
-				<div class="lh-1">
-					<h4 sec:authentication="name" class="h4 mb-0 text-white lh-1"></h4>
-					<small>Home</small>
-				</div>
-			</div>
-			<a th:href="@{/logout}">Effettua il logout</a>
-		</div>
-	</header>
+	<header th:replace="fragments/base.html :: header(pageTitle='Modifica competizione')"></header>
 
 	<main>
 
@@ -86,7 +75,7 @@
 		<a th:href="@{/admin}" class="link-purple card-footer text-muted">Annulla</a>
 	</div>
 	</main>
-	<div>th:replace="fragments/base.html :: scriptFragment"></div>
+	<div th:replace="fragments/base.html :: scripts"></div>>
 </body>
 
 </html>
